--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@ h1{
   font-size:2em;
 }
 
+ul{
+  list-style: square inside;
+}
+
+ol{
+  list-style: decimal inside;
+}
 .body-main{
   /*display: grid;*/
   /*grid-template-rows: 0.1fr 1fr 0.1fr;*/
